test/more/require_deployments_have_multiple_replicas.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deployment-has-multiple-replicas
spec:
  admission: true
  background: true
  rules:
  - exclude:
      any:
      - resources:
          namespaces:
          - kyverno
          - kube-system
          - kube-node-lease
          - kube-public
    match:
      any:
      - resources:
          kinds:
          - Deployment
    name: deployment-has-multiple-replicas
    validate:
      message: Deployments must have more than one replica to ensure availability.
      pattern:
        spec:
          replicas: '>1'
  validationFailureAction: Audit
