test/more/require_drop_all.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: drop-all-capabilities
spec:
  admission: true
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: drop-all-containers
    validate:
      message: Drop all must be defined for every container in the Pod.
      pattern:
        spec:
          containers:
          - securityContext:
              capabilities:
                drop:
                - ALL
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: drop-all-initcontainers
    validate:
      message: Drop all must be defined for every container in the Pod.
      pattern:
        spec:
          initContainers:
          - securityContext:
              capabilities:
                drop:
                - ALL
  validationFailureAction: Audit
